Added new link to show_students in base, added show_students template

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 {% block navigation %}
 <ul>
     <li><a href="{{ url_for('index') }}">Home</a></li>
+    <li><a href="{{ url_for('show_students') }}">All the Students you know</a></li>
 </ul>
 {% endblock %}
 
