--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
 
 <div>
 	Search for a Hogwarts Student to befriend or duel:
-<form action="{{ url_for('show_students') }}" method="POST">
+<form action="{{ url_for('index') }}" method="POST">
     {{ form.name.label() }}{{ form.name() }}<br>
-    {{ form.affilitation.label() }}{{ form.affilitation() }}<br><br>
+    {{ form.affil.label() }}{{ form.affil() }}<br><br>
     {{ form.submit() }}
     {{ form.hidden_tag() }}
 </form>
