--- a/templates/show_students.html
+++ b/templates/show_students.html
@@ -2,13 +2,22 @@
 
 {% block main_content %}
 <h2>Students you know: </h2>
+<div>
+{% for message in get_flashed_messages() %}
+{{ message }}
+{% endfor %}
+</div>
 {% for st in lst %}<br>
 	{{ st[0].name }} - {{ st[0].affil }}<br>
 	House: {{ st[1].name }} <br>
-	Patronus: {{ st[0].patronus }}<br>
+	Patronus: {{ st[0].patronus }}<br><br>
 	<form method="POST" action="/update_student/{{ st[0].id }}">
-		{{ form.hidden_tag() }}
-		{{ form.submit() }}
+		{{ form_up.hidden_tag() }}
+		{{ form_up.submit() }}
+	</form>
+	<form method="POST" action="/delete_student/{{ st[0].id }}">
+		{{ form_del.hidden_tag() }}
+		{{ form_del.submit() }}
 	</form>
 {% endfor %}
 {% endblock %}
