Added sorting_hat and sorting_results templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
 {% block navigation %}
 <ul>
     <li><a href="{{ url_for('index') }}">Home</a></li>
-    <li><a href="{{ url_for('show_students') }}">All the Students you know</a></li>
+    <li><a href="{{ url_for('sorting') }}">Sorting Hat</a></li>
+    <li><a href="{{ url_for('show_students') }}">Your Marauder's Map</a></li>
+    <li><a href="{{ url_for('show_spells') }}">Your Spellbook</a></li>
 </ul>
 {% endblock %}
 
