--- a/templates/show_students.html
+++ b/templates/show_students.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-<h2>Students you know: </h2>
+<h2>Your Marauder's Map: </h2>
+<h3> Here's a list of everyone you know: </h3>
 <div>
 {% for message in get_flashed_messages() %}
 {{ message }}
@@ -10,7 +11,7 @@
 {% for st in lst %}<br>
 	{{ st[0].name }} - {{ st[0].affil }}<br>
 	House: {{ st[1].name }} <br>
-	Patronus: {{ st[0].patronus }}<br><br>
+	Patronus: {{ st[0].patronus }}<br>
 	<form method="POST" action="/update_student/{{ st[0].id }}">
 		{{ form_up.hidden_tag() }}
 		{{ form_up.submit() }}
