--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-<h1>Welcome to Hogwarts, bitches.</h1>
+<h1>Welcome to Hogwarts</h1>
 
 <div>
 <form action="{{ url_for('index') }}" method="POST">
@@ -19,3 +19,4 @@
     {{ form2.hidden_tag() }}
 </form>
 </div>
+{% endblock %}
